feat: add new font

--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -2,8 +2,29 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+  font-family: 'Courier New';
+  font-weight: bold;
+  src: url('./courier/couriercyrps_bold.ttf') format('truetype');
+}
+@font-face {
+  font-family: 'Courier New';
+  font-weight: bold;
+  font-style: italic;
+  src: url('./courier/couriercyrps_boldinclined.ttf') format('truetype');
+}
+@font-face {
+  font-family: 'Courier New';
+  font-style: italic;
+  src: url('./courier/couriercyrps_inclined.ttf') format('truetype');
+}
+@font-face {
+  font-family: 'Courier New';
+  src: url('./courier/couriercyrps.ttf') format('truetype');
+}
+
 * {
-  font-family: 'Courier Prime';
+  font-family: 'Courier New';
 }
 
 html,
@@ -36,5 +57,5 @@ html,
 
 ::-webkit-scrollbar-thumb {
   border-radius: 2px;
-  background-color: hsl(var(--nc));
+  background-color: hsl(var(--bc));
 }
